# collaborative-draw

./: .env.example  CNAME  Cargo.toml  Dockerfile  README.md  index.html
.github/workflows/: gh-pages.yml
src/: captcha.rs  main.rs  structs.rs
web/: CNAME  index.js
