[package]
name = "collaborative-draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["macros", "sync", "rt-multi-thread"] }
tungstenite = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.76"
lazy_static = "1.3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.19"
serde_urlencoded = "0.7.1"
dotenv = "0.13.0"